[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Background.png" type="Texture" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Instructions.gd" type="Script" id=3]
[ext_resource path="res://scenes/SceneTransitionFade.tscn" type="PackedScene" id=4]

[node name="Background" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 39.0
margin_top = 33.0
margin_right = 79.0
margin_bottom = 47.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="."]
margin_left = 32.478
margin_top = 665.688
margin_right = 270.478
margin_bottom = 759.688
theme = ExtResource( 2 )
disabled = true
text = "Previous"
flat = true

[node name="Next" type="Button" parent="."]
margin_left = 855.533
margin_top = 671.242
margin_right = 991.533
margin_bottom = 765.242
theme = ExtResource( 2 )
text = "Next"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="."]
margin_left = 407.962
margin_top = 671.471
margin_right = 609.962
margin_bottom = 765.471
theme = ExtResource( 2 )
text = "Go Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransitionFade" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
